[Buildsystem] Configure the initial build system
It adds the initial instrumentation to the build system using cmake as
main build framework.

Signed-off-by: Andre Loureiro <loureiro.andrew@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.14)
-project(canoa)
+cmake_minimum_required(VERSION 3.10)
+project(Canoa)
+
+option(BUILD_CANOA_EXAMPLE "Include the example directory to build system" OFF)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -7,16 +9,14 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-list(APPEND CMAKE_PREFIX_PATH "$ENV{HOME}/Qt.12.2/5.12.2/gcc_64/lib/cmake")
+set(LIBRARY_NAME)
+set(CANOA_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-include_directories(src)
+list(APPEND CMAKE_PREFIX_PATH "$ENV{QT_HOME_PATH}/lib/cmake")
 
-set(SRC src/Command.cpp
-        src/Speed.cpp
-        main.cpp
-)
+if (BUILD_CANOA_EXAMPLE)
+    message(WARNING "Add the example application to build system")
+    add_subdirectory(example)
+endif ()
 
-find_package(Qt5 COMPONENTS Core Network REQUIRED)
-
-add_executable(canoa ${SRC})
-target_link_libraries(canoa Qt5::Core)
+add_subdirectory(src)
