[Feat] Add CommandFactory class
Signed-off-by: Andre Loureiro <loureiro.andrew@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,21 @@
 include(GNUInstallDirs)
 
+set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")
+
 set(CANOA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(CANOA_COMMANDS_DIR "${CANOA_SRC_DIR}/commands")
+
+set(CANOA_FACTORY_DIR "${CANOA_COMMANDS_DIR}/factory")
 set(CANOA_COMMON_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/common")
 set(CANOA_ENGINE_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/engine")
 
-set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")
-
 include_directories(
+        "${CANOA_FACTORY_DIR}"
         "${CANOA_COMMON_COMMANDS_DIR}"
         "${CANOA_ENGINE_COMMANDS_DIR}")
 
+file(GLOB CANOA_FACTORY_HEADERS "${CANOA_FACTORY_DIR}/*.h")
+file(GLOB CANOA_FACTORY_SRCS "${CANOA_FACTORY_DIR}/*.cpp")
 file(GLOB CANOA_COMMON_COMMANDS_HEADERS "${CANOA_COMMON_COMMANDS_DIR}/*.h")
 file(GLOB CANOA_COMMON_COMMANDS_SRCS "${CANOA_COMMON_COMMANDS_DIR}/*.cpp")
 file(GLOB CANOA_ENGINE_COMMANDS_HEADERS "${CANOA_ENGINE_COMMANDS_DIR}/*.h")
@@ -28,9 +33,15 @@ elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
             ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
 endif ()
 
-set(HEADERS ${CANOA_COMMON_COMMANDS_HEADERS} ${CANOA_ENGINE_COMMANDS_HEADERS})
+set(HEADERS
+        ${CANOA_FACTORY_HEADERS}
+        ${CANOA_COMMON_COMMANDS_HEADERS}
+        ${CANOA_ENGINE_COMMANDS_HEADERS})
 
-set(SRCS ${CANOA_COMMON_COMMANDS_SRCS} ${CANOA_ENGINE_COMMANDS_SRCS})
+set(SRCS
+        ${CANOA_FACTORY_SRCS}
+        ${CANOA_COMMON_COMMANDS_SRCS}
+        ${CANOA_ENGINE_COMMANDS_SRCS})
 
 find_package(Qt5 COMPONENTS Core REQUIRED)
 
