[Infra] Map third-party directory to gitignore file
Signed-off-by: Andre Loureiro <loureiro.andrew@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ cmake-build-*/
 build/
 output/
 
+# Ignore third-party libraries
+third-party/
+
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
