--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")
 set(CANOA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(CANOA_COMMANDS_DIR "${CANOA_SRC_DIR}/commands")
 
-set(CANOA_FACTORY_DIR "${CANOA_COMMANDS_DIR}/factory")
+set(CANOA_FACTORY_DIR "${CANOA_SRC_DIR}/factory")
 set(CANOA_COMMON_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/common")
 set(CANOA_ENGINE_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/engine")
 
