[Buildsystem] Change the install directory
When building in debug mode we change the include and library path to
output directory.

Signed-off-by: Andre Loureiro <loureiro.andrew@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     set(PROJECT_DESTINATION_BIN_DIR ${CANOA_INSTALL_PREFIX}/bin)
     set(PROJECT_DESTINATION_LIB_DIR ${CANOA_INSTALL_PREFIX}/lib)
     set(PROJECT_DESTINATION_INCLUDE_DIR
-            ${CANOA_INSTALL_PREFIX}/include/${PROJECT_NAME})
+            ${CANOA_INSTALL_PREFIX}/include/${PROJECT_NAME}/${CANOA_SRC_ROOT_DIR})
 elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     set(PROJECT_DESTINATION_LIB_DIR ${CMAKE_INSTALL_LIBDIR})
     set(PROJECT_DESTINATION_INCLUDE_DIR
@@ -47,4 +47,10 @@ add_library(${LIBRARY_TARGET_NAME} SHARED ${SRCS})
 
 install(TARGETS ${LIBRARY_TARGET_NAME}
         LIBRARY DESTINATION  ${PROJECT_DESTINATION_LIB_DIR})
-install(FILES ${HEADERS} DESTINATION ${PROJECT_DESTINATION_INCLUDE_DIR})
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
+            DESTINATION ${CANOA_ROOT_DIR}/output/${CMAKE_INSTALL_INCLUDEDIR}
+            FILES_MATCHING PATTERN "*.h")
+elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
+    install(FILES ${HEADERS} DESTINATION ${PROJECT_DESTINATION_INCLUDE_DIR})
+endif ()
