--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(GNUInstallDirs)
 
-set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")
+set(LIBRARY_TARGET_NAME ${PROJECT_NAME})
 
 set(THREADS_HAVE_PTHREAD_ARG 1)
 find_package(Threads REQUIRED)
@@ -8,25 +8,22 @@ find_package(Threads REQUIRED)
 find_package(PkgConfig)
 pkg_check_modules(SERIAL libserial)
 
-set(CANOA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-set(CANOA_COMMANDS_DIR "${CANOA_SRC_DIR}/commands")
-
-set(CANOA_FACTORY_DIR "${CANOA_SRC_DIR}/factory")
-set(CANOA_COMMON_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/common")
-set(CANOA_ENGINE_COMMANDS_DIR "${CANOA_COMMANDS_DIR}/engine")
+set(CANOA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+message(WARNING "Canoa sourcedir: " ${CANOA_SRC_DIR})
 
 include_directories(
-        "${CANOA_FACTORY_DIR}"
-        "${CANOA_COMMON_COMMANDS_DIR}"
-        "${CANOA_ENGINE_COMMANDS_DIR}"
-        "${SERIAL_INCLUDE_DIRS}")
+        ${CANOA_SRC_DIR}/factory
+        ${CANOA_COMMANDS_ROOT_DIR}/common
+        ${CANOA_COMMANDS_ROOT_DIR}/engine
+        ${SERIAL_INCLUDE_DIRS})
 
-file(GLOB CANOA_FACTORY_HEADERS "${CANOA_FACTORY_DIR}/*.h")
-file(GLOB CANOA_FACTORY_SRCS "${CANOA_FACTORY_DIR}/*.cpp")
-file(GLOB CANOA_COMMON_COMMANDS_HEADERS "${CANOA_COMMON_COMMANDS_DIR}/*.h")
-file(GLOB CANOA_COMMON_COMMANDS_SRCS "${CANOA_COMMON_COMMANDS_DIR}/*.cpp")
-file(GLOB CANOA_ENGINE_COMMANDS_HEADERS "${CANOA_ENGINE_COMMANDS_DIR}/*.h")
-file(GLOB CANOA_ENGINE_COMMANDS_SRCS "${CANOA_ENGINE_COMMANDS_DIR}/*.cpp")
+
+file(GLOB CANOA_FACTORY_HEADERS ${CANOA_SRC_DIR}/factory/*.h)
+file(GLOB CANOA_FACTORY_SRCS ${CANOA_SRC_DIR}/factory/*.cpp)
+file(GLOB CANOA_COMMON_COMMANDS_HEADERS ${CANOA_COMMANDS_ROOT_DIR}/common/*.h)
+file(GLOB CANOA_COMMON_COMMANDS_SRCS ${CANOA_COMMANDS_ROOT_DIR}/common/*.cpp)
+file(GLOB CANOA_ENGINE_COMMANDS_HEADERS ${CANOA_COMMANDS_ROOT_DIR}/engine/*.h)
+file(GLOB CANOA_ENGINE_COMMANDS_SRCS ${CANOA_COMMANDS_ROOT_DIR}/engine/*.cpp)
 
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     set(CANOA_INSTALL_PREFIX ${CANOA_ROOT_DIR}/output)
