--- a/tests/commands/common/CMakeLists.txt
+++ b/tests/commands/common/CMakeLists.txt
@@ -1,4 +1,4 @@
-if ("${CANOA_TEST_NAME_EXECUTABLE}" STREQUAL "")
+if (NOT DEFINED ${CANOA_TEST_NAME_EXECUTABLE})
     set(CANOA_TEST_NAME_EXECUTABLE "canoaTests")
 endif ()
 
